finish 50% of Latestnews

--- a/src/assets/sass/_Global.scss
+++ b/src/assets/sass/_Global.scss
@@ -89,7 +89,14 @@ a.link {
   justify-content: center;
 }
 
+.padding0{
+  padding: 0px !important;
+}
 
+.row {
+  margin-left: auto !important;
+  margin-right: auto !important;
+}
 
 .error {
   color: $danger;
