--- a/src/assets/sass/_Variables.scss
+++ b/src/assets/sass/_Variables.scss
@@ -1,10 +1,10 @@
 // Colors
-$mainColor: rgba(0, 115, 37, 1);
-$colorTwo: rgba(0, 115, 37, 0.3);
+// $mainColor: rgba(0, 115, 37, 1);
+// $colorTwo: rgba(0, 115, 37, 0.3);
 $textColor: #000;
 $textColorGrey: #444;
-$bgColor: #f8f8f8;
-$danger: #f86060;
+$bgColor: #fff;
+$danger: red;
 $warm-grey: #8a8a8a;
 $dark: #222;
 $lightDark: #555;
