--- a/src/assets/sass/_Global.scss
+++ b/src/assets/sass/_Global.scss
@@ -1,8 +1,8 @@
 // Global Style
 
-  #root {
-	height: 100%;
-  }
+#root {
+  height: 100%;
+}
 * {
   box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -19,7 +19,8 @@
   margin-right: auto;
   margin-left: auto;
 }
-html,body {
+html,
+body {
   height: 100%;
 }
 #root {
@@ -59,38 +60,49 @@ a.link {
   }
 }
 
-.fullWH{
+.fullWH {
   width: 100%;
   height: 100%;
 }
-
 
 .page-container {
   width: 100%;
   height: 100%;
 }
 
-
-.center{
+.center {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.flex{
+.flex {
   display: flex;
 }
 
-.alignItem{
+.alignItem {
   align-items: center;
 }
 
-.justifyContent{
+.justifyContent {
   justify-content: center;
 }
 
-.padding0{
+.padding0 {
   padding: 0px !important;
+}
+.paddingmargin0 {
+  padding: 0px !important;
+  margin: 0px !important;
+}
+
+.imgFull {
+  width: 100%;
+  height: 100%;
+  position: relative;
+}
+.fullWidth {
+  width: 100% !important;
 }
 
 .row {
@@ -101,7 +113,11 @@ a.link {
 .error {
   color: $danger;
 }
-
-
-
-
+.brightness-wrapper {
+  background: transparent linear-gradient(43deg, #13276b 0%, #00000000 100%) 0%
+    0% no-repeat padding-box;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  border-radius: inherit;
+}
