--- a/src/components/CustomButton/CustomButton.scss
+++ b/src/components/CustomButton/CustomButton.scss
@@ -1,11 +1,24 @@
-
-
-.news-button{
+.news-button {
 }
 
-.sign-button{
-    background-color: transparent;
-    color: #212832;
-    border-color:#212832 ;
-    margin-inline: 15px;
+.sign-button {
+  background-color: transparent;
+  color: #212832;
+  border-color: #212832;
+  margin-inline: 15px;
+}
+
+.social-button {
+  background: #000;
+  color: #fff;
+  border-radius: 30px;
+  border: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 110px;
+  height: 40px;
+  font-size: 10px;
+  margin-inline: 3px;
+  margin-top: 5px;
 }
