--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -67,4 +67,10 @@
   & .social-buttons {
     margin-inline: 10px;
   }
+
+  & .rights-text{
+    color: #5E6282;
+    font-size: 17px;
+    
+  }
 }
