--- a/src/components/CustomBadge/CustomBadge.scss
+++ b/src/components/CustomBadge/CustomBadge.scss
@@ -1,2 +1,12 @@
-
-
+.news-card-badge {
+  background: #e3e3e3 !important;
+  color: #5e6282;
+  font-size: 13px;
+  width: 70px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 7px 50px;
+  border-radius: 10px;
+}
