--- a/src/modules/News/News.scss
+++ b/src/modules/News/News.scss
@@ -2,31 +2,56 @@
   padding: 20px 40px;
 
   & .first-title {
-    color: #5e6282;
+    color: rgba(94, 98, 130, 1);
+    font-weight: bolder;
   }
 
   & .second-title {
     color: #5e6282;
-    font-family: 'Volkhov';
     color: #000;
+    font-weight: bolder;
+    font-size: 60px;
   }
 
   .news-card {
-    background-color: #FFFFFF;
+    background-color: #ffffff;
     box-shadow: 0px 16px 26px #00000029;
     border-radius: 24px;
-    width: 300px;
     height: 470px;
+    // width: 200px;
     border: none;
 
-    & img{
-        border-top-right-radius: inherit;
-        border-top-left-radius: inherit;
-        height: 370px;
+    & .new-card-image {
+      border-top-right-radius: inherit;
+      border-top-left-radius: inherit;
+      height: 370px;
     }
-    & .card-text{
-        height: 100px;
-        color: #5E6282;
+    & .card-text {
+      height: 80px;
+      color: #5e6282;
+      font-size: 17px;
+      font-weight: bold;
+    }
+    & .date-wrapper {
+      display: flex;
+
+      & .date-icon {
+        color: #13beff;
+        font-size: 25px;
+      }
+      & .date-text {
+        color: #707070;
+        font-size: 18px;
+        margin-inline-start: 10px;
+      }
+    }
+
+    & .card-options {
+      justify-content: space-between;
+    }
+
+    & .card-options .icon {
+      margin-inline-start: 5px;
     }
   }
 }
