fix desgin issues-improve code-handle different screens-generate dependency graph

--- a/src/assets/sass/_Variables.scss
+++ b/src/assets/sass/_Variables.scss
@@ -41,9 +41,9 @@ $mwlg: "(min-width: 991.99px)";
 // Large devices (desktops, 992px and up)
 $lg: "(min-width: 992px) and (max-width: 1199.98px)";
 // Extra large devices (large desktops, 1200px and up)
-$xl: "min-width: 1200px";
+$xl: "(min-width: 1200px)";
 
-// Spacing
+// SpacingWS
 $space-8: 8px;
 
 // directions
