--- a/src/components/CustomButton/CustomButton.scss
+++ b/src/components/CustomButton/CustomButton.scss
@@ -47,6 +47,8 @@
   color: #212832;
   border-color: #212832;
   margin-inline: 15px;
+  cursor: pointer;
+  z-index: 100000;
 }
 
 .social-button {
