--- a/src/modules/Home/Home.scss
+++ b/src/modules/Home/Home.scss
@@ -20,6 +20,7 @@
   width: 100%;
   height: 100%;
   position: relative;
+  overflow: hidden;
 
 
 
@@ -74,6 +75,7 @@
     width:670px;
     top: 0px;
     overflow: hidden;
+
 
 
 
