fix issue in banner in arabic version and add note to  dev guide

--- a/src/assets/sass/_responsive.scss
+++ b/src/assets/sass/_responsive.scss
@@ -57,6 +57,8 @@
     & .icon-container {
       margin-top: -90px;
       margin-inline-end: -240px;
+      margin-inline-start: -240px;
+
     }
   }
 }
@@ -176,6 +178,8 @@
     & .icon-container {
       margin-top: -140px;
       margin-inline-end: -400px;
+      margin-inline-start: -400px;
+
     }
   }
 }
@@ -236,6 +240,8 @@
     & .icon-container {
       margin-top: -200px;
       margin-inline-end: -370px;
+      margin-inline-start: -370px;
+
     }
   }
 }
@@ -343,6 +349,8 @@
     & .icon-container {
       margin-top: -250px;
       margin-inline-end: -325px;
+      margin-inline-start: -325px;
+
     }
   }
 }
@@ -389,6 +397,8 @@
     & .icon-container {
       margin-top: -250px;
       margin-inline-end: -310px;
+      margin-inline-start: -310px;
+
     }
   }
 }
@@ -445,6 +455,7 @@
     & .icon-container {
       margin-top: -260px;
       margin-inline-end: -170px;
+      margin-inline-start: -170px;
     }
   }
 }
